[metadata]
name = ad-scheduler-olemagnp
version = 0.0.1
author = Ole-Magnus Pedersen
author_email = ole-magnus.pedersen@gmail.com
description = Simple scheduler for use with home assistant and appdaemon
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/olemagnp/ad_scheduler
project_urls =
    Bug Tracker = https://github.com/olemagnp/ad_scheduler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir = 
    = src
packages = find:
python_requires >= 3.6
tests_require = ["pytest"]

[options.packages.find]
where = src

[aliases]
test=pytest